crates/toml/tests/snapshots/invalid/ext/table/newline-1.stderr
TOML parse error at line 1, column 7
  |
1 | [table
  |       ^
invalid table header
expected `.`, `]`
